--- a/Assets/css/main-content.css
+++ b/Assets/css/main-content.css
@@ -43,6 +43,7 @@ form .form-btns {
     border: 0;
     padding: 0.5rem 2.3rem;
     color: #fff;
+    cursor: pointer;
 }
 
 .form-btns input[type="submit"] {
@@ -62,5 +63,5 @@ form .form-btns {
 }
 
 .errorMessage {
-    color: #fff;
+    color: red;
 }
